# WEB_HW_7

./: config.ini  main_pt2.py  pyproject.toml  seed.py
migration/: env.py
migration/versions/: 2238ce066507_init.py  526cb9423b3f_second.py
pt_1/: Result 1.txt  Result 10.txt  Result 11.txt  Result 12.txt  Result 2.txt  Result 3.txt  Result 4.txt  Result 5.txt  Result 6.txt  Result 7.txt  Result 8.txt  Result 9.txt  my_select.py
pt_2src/: create_data_db.py  delete_data_db.py  parser.py  pretty_output.py  read_db.py  update_data_db.py
src/: classes_for_entities.py  db.py  models.py
tables/: _groups__202306081930.csv  grades_202306081930.csv  students_202306081931.csv  subjects_202306081931.csv  teachers_202306081931.csv
