[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_7"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
faker = "^18.10.1"
psycopg2 = "^2.9.6"
prettytable = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
